# flostra-backend

./: .gitignore  alembic_stub.sql  db.py  definitions_exporter.py  export_definitions.py  io_utils.py  llm_plugins.py  main.py  mq_worker.py  nodes.py  pyproject.toml  routes_ask.py  routes_nodes.py  routes_plugins.py  routes_secrets.py  routes_workflow.py  routes_workflow_store.py  runtime_files.py  schema_types.py  secrets_store.py  worker_main.py  workflow_engine.py
exported/: node_definitions.json  plugin_definitions.json
nodes/: __init__.py  base.py  branch_node.py  code_node.py  email_send.py  end_node.py  file_nodes.py  http_request.py  json_nodes.py  llm_node.py  rabbitmq_node.py  redis_node.py  renderer_node.py  s3_node.py  sql_node.py  ssh.py  template_string.py  text_json.py  triggers.py  utils.py
