[project]
name = "flostra-backend"
version = "0.1.0"
description = "Flostra Backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.5.8",
    "aiobotocore>=3.0.0",
    "asyncpg>=0.31.0",
    "asyncssh>=2.21.1",
    "authlib>=1.6.5",
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "longchain>=0.4.2",
    "openai>=2.8.1",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
    "redis>=7.1.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn>=0.38.0",
]
